# ytm

./: Cargo.toml  README.md
assets/: style.css
data/: seed.json  v1-watch-history.json
scripts/: generate-dummy.ps1  generate-example.ps1
src/: config.rs  lib.rs  main.rs  service.rs  shutdown.rs  utils.rs  vault.rs  youtube.rs
src/schema/: mod.rs  v1.rs
templates/: index.html
