[package]
name = "ytm"
description = "Youtube Memories Viewer"
version = "0.1.1"
authors = ["MarrieMitsu"]
edition = "2024"
readme = "./README.md"
repository = "https://github.com/MarrieMitsu/ytm"

[dependencies]
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["serde_json"] }
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.27"
once_cell = "1.21.1"
regex = "1.11.1"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
